tests/neg/semantic_undefined_var.baa
// EXPECT: [Semantic Error]
// EXPECT: Assignment to undefined variable
صحيح الرئيسية() {
    س = 1.
    إرجع 0.
}
